--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -9,10 +9,10 @@
          processIsolation="false"
          stopOnFailure="false"
          syntaxCheck="false"
-         bootstrap="./vendor/autoload.php">
+         bootstrap="vendor/autoload.php">
 
     <testsuites>
-       <testsuite name="Drupal\vimeo_field">
+       <testsuite name="Drupal\vimeo_field test suite">
            <directory suffix="Test.php">Tests</directory>
        </testsuite>
     </testsuites>
