--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,13 @@
         }
     ],
     "require-dev": {
-        "phpunit/phpunit": "~4.1"
+        "phpunit/phpunit": "~3.7",
+        "drupal/drupal": "8.x-dev@dev"
     },
     "autoload": {
         "psr-4": {
             "Drupal\\vimeo_field\\": "src"
         }
-    }
+    },
+    "minimum-stability": "dev"
 }
