--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         }
     ],
     "require-dev": {
+        "php": ">5.4",
         "phpunit/phpunit": "~3.7",
         "drupal/drupal": "8.x-dev@dev"
     },
