--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,9 @@
     ],
     "require-dev": {
         "php": ">5.4",
-        "phpunit/phpunit": "~3.7",
-        "drupal/drupal": "8.x-dev@dev"
+        "phpunit/phpunit": "4.1.*",
+        "hechoendrupal/drupal": "8.0.0-beta4",
+        "drupal/coder": "8.2.0-beta1"
     },
     "autoload": {
         "psr-4": {
